Sourced fzf to bashrc and zshrc, some tmux conf, new aliases

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,1 +1,8 @@
 set -g default-terminal "xterm-256color"
+
+# use vi keybindings
+setw -g mode-keys vi
+
+# bind C-b r to reload the config file
+unbind r
+bind r source-file ~/.tmux.conf
