--- a/config/i3/config
+++ b/config/i3/config
@@ -90,7 +90,12 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
-# focus the child container
+# create nonnumerical workspace
+bindsym $mod+m exec "i3-input -F 'workspace %s' 'go to workspace: '"
+# move window to nonnumerical workspace
+bindsym $mod+u exec "i3-input -F 'move container to workspace %s' -P 'move to workspace: '"
+
+# FOCUS the child container
 #bindsym $mod+d focus child
 
 set $ws1 "1: Extra"
