--- a/config/i3/config
+++ b/config/i3/config
@@ -244,6 +244,8 @@ bindsym $mod+p mode "program"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    tray_output HDMI1
+    tray_output eDP1
     status_command     i3blocks -c ~/.config/i3/i3blocks.conf
     position           top
     font pango:fontawesome 12
